--- a/Index.html
+++ b/Index.html
@@ -15,8 +15,8 @@
         <h1>Mickael Ferreira</h1>
         <nav>
             <ul>
-                <li><a href="file:///C:/Users/Pichau/Desktop/Cursos/ProjetoCurr%C3%ADculo/Index.html">Home</a></li>
-                <li><a href="file:///C:/Users/Pichau/Desktop/Cursos/ProjetoCurr%C3%ADculo/Contato.html">Contato</a></li>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
